--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,5 +1,33 @@
 <header class="header">
 	<div class="header__container">
-
+		<div class="header__inner">
+			<div class="header__top">
+				<a href="/" class="header__logo"><img src="../img/logo.svg" alt="" /></a>
+				<div class="header__data data-header">
+					<div class="data-header__clock">
+						<i class="_icon-clock"></i>
+						<div class="data-header__wrapper">
+							<p class="data-header__text">Время работы: Пн. - Сб. с 9:00 до 18:00</p>
+							<br />
+							<p class="data-header__text">отгрузка продукции Пн. – Пт. с 9:00 до 15:00</p>
+						</div>
+					</div>
+					<div class="data-header__location">
+						<i class="_icon-location"></i>
+						<div class="data-header__wrapper">
+							<p class="data-header__text">г. Краснодар, ст. Марьянская, ул. Соболя, 1/1</p>
+						</div>
+					</div>
+				</div>
+				<div class="header__call">
+					<a href="tel:89183777585" class="header__number">+7 (918) 377-75-85</a>
+					<a href="#" class="btn__solid">перезвоните мне</a>
+					<div class="hover__btn">
+						<img src="@img/tip.png" alt="" />
+					</div>
+				</div>
+			</div>
+			<div class="header__bottom"></div>
+		</div>
 	</div>
 </header>
