--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,109 @@
 <footer class="footer">
 	<div class="footer__container">
+		<div class="footer__inner">
+			<div class="footer__top">
+				<div class="footer__item">
+					<h3 class="footer__item_title">Продукция</h3>
+					<ul class="footer__list">
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Блоки полистиролбетон</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Перемычки полистиролбетон</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Раствор полистиролбетон</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Сопутствующие материалы</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Клей для кладки блока</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Сетка для кладки блока</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Прайс-лист</a></li>
+					</ul>
+				</div>
+
+				<div class="footer__item">
+					<h3 class="footer__item_title">Применение</h3>
+					<ul class="footer__list">
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Несущие стены</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Внутренние несущие стены</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Перегородки</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Перекрытия</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Теплая стяжка пола</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Утепление полистиролбетоном</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Кладка блока инструкция</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Кладка перемычки инструкция</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Фотогалерея</a></li>
+					</ul>
+				</div>
+
+				<div class="footer__item">
+					<h3 class="footer__item_title">О полистиролбетоне</h3>
+					<ul class="footer__list">
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Преимущества</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Характеристики</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Свойства полистиролбетона</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Сертификаты соответствия</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Сравнение с другими блоками</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Таблица сравнений блоков</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Какие блоки лучше</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Отзывы</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link green">Экологичность</a></li>
+					</ul>
+				</div>
+
+				<div class="footer__item">
+					<h3 class="footer__item_title">Строительство</h3>
+					<ul class="footer__list">
+						<li class="footer__list_item">
+							<a href="#" class="footer__list_link"
+								>Авторские проекты домов <br />
+								из полистиролбетона</a
+							>
+						</li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Архитектура/проектирование</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Проекты домов</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Этапы строительства</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Проектным иснтитутам</a></li>
+						<li class="footer__list_item">
+							<a href="#" class="footer__list_link"
+								>Застройщикам гражданского <br />
+								назначения</a
+							>
+						</li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Технология пассивный дом</a></li>
+					</ul>
+				</div>
+
+				<div class="footer__item">
+					<h3 class="footer__item_title">Завод полистиролбетон</h3>
+					<ul class="footer__list">
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Полистиролбетон от производителя в Краснодаре</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Экскурсии по заводу</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Доставка блоков</a></li>
+						<li class="footer__list_item"><a href="#" class="footer__list_link">Приехать к нам</a></li>
+						<li class="footer__list_item">
+							<a href="#" class="footer__list_link"
+								>Доставка укладка раствора <br />
+								цена от 3 700р. за м3</a
+							>
+						</li>
+						<li class="footer__list_item">
+							<a href="#" class="footer__list_link data"><i class="_icon-location"></i> г. Краснодар, ст. Марьянская, ул. Соболя, 1/1</a>
+						</li>
+						<li class="footer__list_item">
+							<a href="#" class="footer__list_link data"><i class="_icon-clock"></i> Пн. - Пт. с 9:0 до 17:00</a>
+						</li>
+						<li class="footer__list_item">
+							<a href="#" class="footer__list_link data"><i class="_icon-phone"></i> +7 (861) 70-00-25 +7(918) 37-75-85</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="footer__bottom">
+				<div class="footer__wrapper">
+					<div class="footer__logo">
+						<a href="#" class="footer__link">Завод полистиролбетон</a>
+					</div>
+					<p class="footer__textup">
+						© 2011-2019 Завод полистиролбетонных изделий - Все права защищены | полистиролбетон | <a href="#">карта сайта</a> | <a href="#"><i class="_icon-like"></i> сказать спасибо</a>
+					</p>
+				</div>
+				<p class="footer__text">Производитель изделий из полистиролбетона, блок, перемычки, жидкий раствор.</p>
+			</div>
+		</div>
 	</div>
 </footer>
