--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -8,10 +8,10 @@
 						<i class="_icon-clock"></i>
 						<div class="data-header__wrapper">
 							<p class="data-header__text">Время работы: Пн. - Сб. с 9:00 до 18:00</p>
-							<br />
 							<p class="data-header__text">отгрузка продукции Пн. – Пт. с 9:00 до 15:00</p>
 						</div>
 					</div>
+
 					<div class="data-header__location">
 						<i class="_icon-location"></i>
 						<div class="data-header__wrapper">
@@ -19,15 +19,35 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="header__call">
-					<a href="tel:89183777585" class="header__number">+7 (918) 377-75-85</a>
-					<a href="#" class="btn__solid">перезвоните мне</a>
-					<div class="hover__btn">
-						<img src="@img/tip.png" alt="" />
+					<a href="tel:89183777585" class="header__number"><i class="_icon-phone"></i> +7 (918) 377-75-85</a>
+					<div class="header__btn">
+						<a href="#" class="btn__solid">перезвоните мне</a>
+						<div class="hover__btn">
+							<img src="@img/tip.png" alt="" />
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="header__bottom"></div>
+			<div class="header__bottom">
+				<div class="header__menu menu">
+					<button type="button" class="menu__icon icon-menu"><span></span></button>
+					<nav class="menu__body">
+						<ul class="menu__list">
+							<li class="menu__item"><a href="" class="menu__link">Главная</a></li>
+							<li class="menu__item"><a href="" class="menu__link">Продукция</a></li>
+							<li class="menu__item"><a href="" class="menu__link">Прайс-Лист</a></li>
+							<li class="menu__item"><a href="" class="menu__link">Фотогалерея</a></li>
+							<li class="menu__item"><a href="" class="menu__link">Калькулятор</a></li>
+							<li class="menu__item menu__item_green"><a href="" class="menu__link">Экологичность</a></li>
+							<li class="menu__item"><a href="" class="menu__link">Проекты</a></li>
+							<li class="menu__item"><a href="" class="menu__link">О компании</a></li>
+							<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
 		</div>
 	</div>
 </header>
