--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,56 @@
 	<body>
 		<div class="wrapper">
 			@@include('html/_header.htm',{})
-			<main class="page"></main>
+			<main class="page">
+				<section class="about">
+					<div class="about__container">
+						<div class="about__inner">
+							<div class="about__title">
+								<div class="about__dots"><span></span><span></span><span></span></div>
+								<h1>Калькулятор расчета блока</h1>
+							</div>
+							<div class="about__text">
+								<p>
+									Раньше дома и здания строили, особо не задумываясь о теплопроводности. Поэтому делали стены дома толстыми до 1,5 метров, чтобы в доме было тепло и комфортно даже в
+									сильный мороз и прохладно в жаркую погоду. Сейчас делать стены такими толстыми экономически нецелесообразно. В настоящее время существуют материалы, которые могут
+									обеспечить высокие показатели тепловой защиты при меньшей толщине стены, но при таких же прочностных характеристиках.
+								</p>
+								<p>
+									<span>Этот калькулятор</span> поможет выбрать вам нужную вам толщину стен дома в зависимости от вашего региона и от вида материала, который вы собираетесь
+									использовать для несущих стен.
+								</p>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="calculator">
+					<div class="calculator__container">
+						<div class="calculator__inner">
+							<div class="culculator__head">
+								<ol class="progtrckr" data-progtrckr-steps="4">
+									<li class="progtrckr-item active">Наружные несущие стены</li>
+									<li class="progtrckr-item">Внутренние несущие стены</li>
+									<li class="progtrckr-item">Внутренние перегородки</li>
+									<li class="progtrckr-item">Отсчет по расчету</li>
+								</ol>
+							</div>
+							<form action="#" class="calculator__form">
+								<div class="tab active">
+									<div class="tab__title">
+										<img src="@img/plans/1.svg" alt="" />
+										<h2>Наружные несущие стены</h2>
+									</div>
+									@@include('html/calculator-1.htm',{})
+								</div>
+								<div class="tab">@@include('html/calculator-2.htm',{})</div>
+								<div class="tab">@@include('html/calculator-3.htm',{})</div>
+								<div class="tab">@@include('html/calculator-4.1.htm',{})</div>
+								<div class="tab">@@include('html/calculator-4.2.htm',{})</div>
+							</form>
+						</div>
+					</div>
+				</section>
+			</main>
 			@@include('html/_footer.htm',{})
 		</div>
 		@@include('html/_js.htm',{})
