--- a/src/html/block-parameters.htm
+++ b/src/html/block-parameters.htm
@@ -53,12 +53,12 @@
 				<p class="block__subtitle">Расположение блока</p>
 				<div class="block__row">
 					<div class="block__radio">
-						<input id="radio-1" type="radio" name="radio" value="1" />
-						<label for="radio-1">Вертикально</label>
+						<input id="block-1" type="radio" name="radio" value="1" />
+						<label for="block-1">Вертикально</label>
 					</div>
 					<div class="block__radio">
-						<input id="radio-2" type="radio" name="radio" value="2" checked />
-						<label for="radio-2">Горизонтально</label>
+						<input id="block-1.2" type="radio" name="radio" value="2" checked />
+						<label for="block-1.2">Горизонтально</label>
 					</div>
 				</div>
 			</div>
