almost the latest tab version

--- a/src/html/window-openings.htm
+++ b/src/html/window-openings.htm
@@ -1,65 +1,28 @@
 <div class="block">
 	<div class="block__left">
 		<div class="block__title">
-			<i class="_icon-window"></i>
-			<h4>Укажите размеры проемов (оконных/дверных)</h4>
+			<i class="_icon-windows-2"></i>
+			<h4>Укажите размеры Трапециевидных окон</h4>
 		</div>
 
 		<div class="block__wrapper">
 			<div class="block__spoiler-wrapper">
 				<div class="block__spoilers">
 					<div class="block__spoiler">
-						<button data-value="1"><span>Проем 1</span> 1,6 х 1,5 - 4 шт. (+ по 2 перемычки)</button>
+						<button data-outer-opening="1"><span>Окно 1</span> 1 х 1,5 х 2 - 2 шт.</button>
 					</div>
 					<div class="block__spoiler">
-						<button data-value="2"><span>Проем 2</span> 1,3 х 2 - 1 шт. (+ перемычка)</button>
+						<button data-outer-opening="2"><span>Окно 2</span> 1 х 1,8 х 2,2 - 1шт.</button>
 					</div>
 					<div class="block__spoiler">
-						<button data-value="3"><span>Проем 3</span> 1,8 х 2 - 3 шт. (+ по 2 перемычки)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="4"><span>Проем 4</span> 1,9 х 2 - 3 шт. (+ по 2 перемычки)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="5"><span>Проем 5</span> 1,1 х 1,1 - 1шт. (+ перемычка)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="6"><span>Проем 6</span> 2 х 1,4 - 4 шт. (+ по 2 перемычки)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="7"><span>Проем 7</span> 1,3 х 2,5 - 1 шт. (+ перемычка)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="8"><span>Проем 8</span> 0,8 х 1 - 3 шт. (+ по 2 перемычки)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="9"><span>Проем 9</span> 0,3 х 0,5 - 2 шт. (+ по 2 перемычки)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="10"><span>Проем 10</span> 1 х 1,5 - 2шт. (+ перемычки)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="11"><span>Проем 11</span> 0,9 х 1,4 - 1 шт. (+ перемычка)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="12"><span>Проем 12</span> 1,1 х 2,1 - 1 шт. (+ перемычка)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="13"><span>Проем 13</span> 0,8 х 2,2 - 3 шт. (+ перемычки)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="14"><span>Проем 14</span> 1,2 х 0,5 - 2 шт. (+ перемычки)</button>
-					</div>
-					<div class="block__spoiler">
-						<button data-value="15"><span>Проем 15</span> 0,7 х 1,5 - 2шт. (+ по 2 перемычки)</button>
+						<button data-outer-opening="3"><span>Окно 3</span> 1,5 х 1,8 х 2,2 - 1шт.</button>
 					</div>
 				</div>
-				<button class="block__btn-spoiler">Дополнтельно <i class="_icon-arrow-down"></i></button>
 			</div>
 		</div>
 	</div>
 	<!-- ----------------------------------------------------------- -->
 	<div class="block__right">
-		<img src="@img/window-opening/1.png" class="block__right_img" alt="" />
+		<img src="@img/trapezoidal-windows/1.png" class="block__right_img" alt="" />
 	</div>
 </div>
