--- a/src/html/calculator-1.htm
+++ b/src/html/calculator-1.htm
@@ -1,1 +1,4 @@
-<div class="calc-1">@@include('./block-parameters.htm',{}) @@include('./wall-dimensions.htm',{}) @@include('./window-openings.htm',{}) @@include('./front-dimensions.htm',{})</div>
+<div class="calc-1">
+	@@include('./block-parameters.htm',{}) @@include('./wall-dimensions.htm',{}) @@include('./window-openings.htm',{}) @@include('./front-dimensions.htm',{}) @@include('./window-openings.htm',{})
+	@@include('./round-windows.htm',{}) @@include('./block-glue.htm',{}) @@include('./block-grid.htm',{})
+</div>
