--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" data-scroll="120">
 	<div class="header__container">
 		<div class="header__inner">
 			<div class="header__top">
