--- a/src/html/wall-dimensions.htm
+++ b/src/html/wall-dimensions.htm
@@ -105,6 +105,10 @@
 	</div>
 	<!-- ----------------------------------------------------------- -->
 	<div class="block__right">
-		<img src="@img/home-1.png" class="block__right_img" alt="" />
+		<img src="@img/wall-size/1.png" class="block__right_img switch__img active__img" alt="" />
+		<img src="@img/wall-size/2.png" class="block__right_img switch__img" alt="" />
+		<img src="@img/wall-size/3.png" class="block__right_img switch__img" alt="" />
+		<img src="@img/wall-size/4.png" class="block__right_img switch__img" alt="" />
+		<img src="@img/wall-size/5.png" class="block__right_img switch__img" alt="" />
 	</div>
 </div>
